--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(post) do |f|
+= simple_form_for(post) do |f|
   - if post.errors.any?
     #error_explanation
       %h2
@@ -11,8 +11,7 @@
     = f.label :Название
     = f.text_field :title, class: 'form-control'
   .form-group
-    = f.label :Текст
-    = f.text_area :body, class: 'form-control'
+    = f.input :body, as: :pagedown, input_html: { preview: true, rows: 10 }, class: 'form-control'
     = f.hidden_field :user_id
   .actions
     = f.submit class: 'btn btn-primary'
