#19 Carrierwave and Dropzone

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,8 +1,8 @@
-= simple_form_for(post) do |f|
+= simple_form_for post, html: {id:'myForm', multipart: true, class: 'dropzone'} do |f|
   - if post.errors.any?
     #error_explanation
       %h2
-        = pluralize(post.errors.count, "error")
+        = pluralize(post.errors.count, 'error')
         prohibited this post from being saved:
       %ul
         - post.errors.full_messages.each do |message|
