--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,6 @@
 @import 'bootstrap';
 @import 'scaffolds';
 @import 'posts';
-@import 'users'
+@import 'users';
+@import 'font-awesome';
+@import 'pagedown_bootstrap';
