--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -15,3 +15,13 @@
     = f.hidden_field :user_id
   .actions
     = f.submit class: 'btn btn-primary'
+- if post.attachments.any?
+  %br
+  %a.list-group-item.active
+    = 'Прикреплённые файлы'
+  %input#post_id{ value: post.id, hidden: true }
+  - post.attachments.each do |att|
+    %a.list-group-item
+      .att_name.inline= att.file_name
+      %input.att_id{ value: att.id, hidden: true }
+      %button.btn.btn-default.delete_att.glyphicon.glyphicon-trash.icon.red.float-right
