--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -11,7 +11,13 @@
     = f.label :Название
     = f.text_field :title, class: 'form-control'
   .form-group
-    = f.text_area :body, class: 'form-control'
+    = f.label :Тело_поста
+    = f.text_area :body, id: 'wysiwyg', class: 'form-control'
     = f.hidden_field :user_id
   .actions
     = f.submit class: 'btn btn-primary'
+
+:javascript
+  $(function() {
+      $('#wysiwyg').froalaEditor()
+  });
