--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -19,5 +19,8 @@
 
 :javascript
   $(function() {
-      $('#wysiwyg').froalaEditor()
+      $('#wysiwyg').froalaEditor({
+      language: 'ru',
+      imageOutputSize: true
+      })
   });
