--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -34,12 +34,16 @@
     .row
       - if user_signed_in?
         .col-md-6
-          %textarea.form-control#comment_body
-          %input#post_id{ value: @post.id, hidden: true }
-          %input#author_id{ value: current_user.id, hidden: true }
-          %input#author_username{ value: current_user.username, hidden: true }
-          %input#author_avatar{ value: current_user.avatar, hidden: true }
-          %button.btn.btn-success.mt-10.create_comment= 'Добавить комментарий'
+          - if current_user.try(:banned?)
+            %p
+              = 'Вы были забанены и не можете оставлять комментарии'
+          - else
+            %textarea.form-control#comment_body
+            %input#post_id{ value: @post.id, hidden: true }
+            %input#author_id{ value: current_user.id, hidden: true }
+            %input#author_username{ value: current_user.username, hidden: true }
+            %input#author_avatar{ value: current_user.avatar, hidden: true }
+            %button.btn.btn-success.mt-10.create_comment= 'Добавить комментарий'
       - else
         .col-md-6
           %p
