--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,25 +8,26 @@
   %body
     %header.container
       .row
-        %ul.list-unstyled.inline.pull-right.mb-0
-          - if user_signed_in?
-            %li.inline= link_to 'Профиль', user_profile_path(current_user.username), class: 'btn btn-link header-nav-link'
-            %li.inline= link_to 'Выход', destroy_user_session_path, method: :delete, class: 'btn btn-link header-nav-link'
-          -else
-            %li.inline= link_to 'Вход', new_user_session_path, class: 'btn btn-link header-nav-link'
-            %li.inline= link_to 'Регистрация', new_user_registration_path, class: 'btn btn-link header-nav-link'
-      - if flash[:notice]
-        .alert.alert-success.fade.in
-          %button.close{'data-dismiss' => 'alert'} &times;
-          = flash[:notice]
-      - elsif flash[:error]
-        .alert.alert-danger.fade.in
-          %button.close{'data-dismiss' => 'alert'} &times;
-          = flash[:error]
-      - elsif flash[:alert]
-        .alert.alert-warning.fade.in
-          %button.close{'data-dismiss' => 'alert'} &times;
-          = flash[:alert]
+        .col-xs-12.col-sm-12.col-md-12.col-lg-12
+          %ul.list-unstyled.inline.pull-right.mb-0
+            - if user_signed_in?
+              %li.inline= link_to 'Профиль', user_profile_path(current_user.username), class: 'btn btn-link header-nav-link'
+              %li.inline= link_to 'Выход', destroy_user_session_path, method: :delete, class: 'btn btn-link header-nav-link'
+            -else
+              %li.inline= link_to 'Вход', new_user_session_path, class: 'btn btn-link header-nav-link'
+              %li.inline= link_to 'Регистрация', new_user_registration_path, class: 'btn btn-link header-nav-link'
+        - if flash[:notice]
+          .alert.alert-success.fade.in
+            %button.close{'data-dismiss' => 'alert'} &times;
+            = flash[:notice]
+        - elsif flash[:error]
+          .alert.alert-danger.fade.in
+            %button.close{'data-dismiss' => 'alert'} &times;
+            = flash[:error]
+        - elsif flash[:alert]
+          .alert.alert-warning.fade.in
+            %button.close{'data-dismiss' => 'alert'} &times;
+            = flash[:alert]
       .row.head
         %h1= link_to 'БЛОГ', root_path
         = render partial: 'layouts/svg', locals: {points: '0,100 100,0 100,100', fill: 'white'}
