--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -21,7 +21,7 @@
         %tr
           %th.title{colspan: 3}= link_to post.title, post
         %tr
-          %td.time{colspan: 3}= post.created_at.strftime("%e, %B %Y %X")
+          %td.time{colspan: 3}= I18n.l post.created_at, format: :long
         %tr
           %td.text{colspan: 3}= truncate(post.body, length: 100)
         %tr
