--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -19,6 +19,9 @@
       - if @post.comments.any?
         - @post.comments.each do |comment|
           %a.list-group-item
+            .comment_author
+              =image_tag(comment.user.avatar, size: '16')
+              ="#{comment.user.username} время создания: #{comment.created_at.strftime("%d.%m.%Y %H:%M")}"
             %input.body_edit{ value: comment.body, hidden: true}
             .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
             %input.comment_id{ value: comment.id, hidden: true }
@@ -32,6 +35,8 @@
           %textarea.form-control#comment_body
           %input#post_id{ value: @post.id, hidden: true }
           %input#author_id{ value: current_user.id, hidden: true }
+          %input#author_username{ value: current_user.username, hidden: true }
+          %input#author_avatar{ value: current_user.avatar, hidden: true }
           %button.btn.btn-success.mt-10.create_comment= 'Добавить комментарий'
       - else
         .col-md-6
