--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,12 +1,12 @@
 .registration_block
   %h2= "Редактировать"
-  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f|
     = devise_error_messages!
     .form-group
       = f.label :Имя_пользователя, class:'control-label'
       = f.text_field :username, autofocus: true, class: 'form-control'
       = f.label :Электронная_почта, class: 'control-label'
-      = f.email_field :email, autofocus: true, class: 'form-control'
+      = f.email_field :email, class: 'form-control'
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       %div
         Currently waiting confirmation for: #{resource.unconfirmed_email}
@@ -25,6 +25,10 @@
       = f.label :Текущий_пароль, class: 'control-label'
       %i (для применения изменений)
       = f.password_field :current_password, autocomplete: "off", class: 'form-control'
+    = image_tag(current_user.avatar.url, size: '300', class: 'img-circle')
+    .form-group
+      = f.label :Новый_аватар, class: 'control-label'
+      = f.file_field :avatar, class: 'form-control'
     .form-group
       = f.submit 'Обновить',  class: 'btn btn-primary'
   %h3= 'Удалить мой аккаунт'
