--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,12 +1,12 @@
 .registration_block
   %h2= 'Регистрация'
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {multipart: true}) do |f|
     = devise_error_messages!
     .form-group
       = f.label :Имя_пользователя, class:'control-label'
       = f.text_field :username, autofocus: true, class: 'form-control'
       = f.label :Электронная_почта, class:'control-label'
-      = f.email_field :email, autofocus: true, class: 'form-control'
+      = f.email_field :email, class: 'form-control'
     .form-group
       = f.label :Пароль, class: 'control-label'
       - if @minimum_password_length
@@ -16,6 +16,9 @@
     .form-group
       = f.label :Подтверждение_пароля, class: 'control-label'
       = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+    .form-group
+      = f.label :Аватар, class: 'control-label'
+      = f.file_field :avatar, class: 'form-control'
     = f.submit 'Зарегистрироваться', class: 'btn btn-primary'
     |
     = render "devise/shared/links"
