--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,7 @@
         %th{colspan: '2'}= @user.username
       %tr
         %td{colspan: '2'}
-          %span.glyphicon.glyphicon-user.user
+          =image_tag(@user.avatar.url, size: '300', class: 'img-circle')
       %tr
         %td{colspan: '2'}= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
       - if @user.comments.any?
