--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -23,7 +23,7 @@
         %tr
           %td.time.no-border{colspan: 3}= I18n.l post.created_at, format: :long
         %tr
-          %td.text.no-border{colspan: 3}= truncate((post.body), length: 100)
+          %td.text.no-border{colspan: 3}= truncate(post.description, length: 100)
         %tr
           %td.no-border
             =link_to edit_post_path(post), class: 'btn btn-default icon' do
