--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,11 +20,11 @@
           .alert.alert-success.fade.in
             %button.close{'data-dismiss' => 'alert'} &times;
             = flash[:notice]
-        - elsif flash[:error]
+        - if flash[:error]
           .alert.alert-danger.fade.in
             %button.close{'data-dismiss' => 'alert'} &times;
             = flash[:error]
-        - elsif flash[:alert]
+        - if flash[:alert]
           .alert.alert-warning.fade.in
             %button.close{'data-dismiss' => 'alert'} &times;
             = flash[:alert]
