--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -21,7 +21,7 @@
           %a.list-group-item
             .comment_author
               =image_tag(comment.user.avatar, size: '16')
-              ="#{comment.user.username} время создания: #{comment.created_at.strftime("%d.%m.%Y %H:%M")}"
+              ="#{comment.user.username} время создания: #{I18n.l(comment.created_at, format: :short)}"
             %input.body_edit{ value: comment.body, hidden: true}
             .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
             %input.comment_id{ value: comment.id, hidden: true }
