#11: Minor fix in post show

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -34,7 +34,7 @@
     .row
       - if user_signed_in?
         .col-md-6
-          - if current_user.try(:banned?)
+          - if current_user&.banned?
             %p
               = 'Вы были забанены и не можете оставлять комментарии'
           - else
