--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -15,6 +15,6 @@
     = f.text_field :description, class: 'form-control', placeholder: 'Допускается не более 100 символов', maxlength: '100'
   .form-group
     = f.label :Тело_поста
-    = f.text_area :body, id: 'wysiwyg', class: 'form-control'
+    = f.text_area :body, id: 'wysiwyg'
   .actions
     = f.submit class: 'btn btn-primary'
