--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -9,10 +9,12 @@
           %li= message
   .form-group
     = f.label :Название
-    = f.text_field :title, class: 'form-control'
+    = f.text_field :title, class: 'form-control', placeholder: 'Допускается не более 25 символов', maxlength: '25'
+  .form-group
+    = f.label :Описание
+    = f.text_field :description, class: 'form-control', placeholder: 'Допускается не более 100 символов', maxlength: '100'
   .form-group
     = f.label :Тело_поста
-    = f.text_area :body, id: 'wysiwyg', class: 'form-control'
-    = f.hidden_field :user_id
+    = f.text_area :body, id: 'wysiwyg'
   .actions
     = f.submit class: 'btn btn-primary'
