--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -25,10 +25,10 @@
             %input.body_edit{ value: comment.body, hidden: true}
             .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
             %input.comment_id{ value: comment.id, hidden: true }
-            - if policy(comment).update?
-              %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon.red.float-right
+            - if policy(comment).edit?
+            %button.btn.btn-default.edit_comment.glyphicon.glyphicon-pencil.icon.float-right
             - if policy(comment).destroy?
-              %button.btn.btn-default.edit_comment.glyphicon.glyphicon-pencil.icon.float-right
+              %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon.red.float-right
       - else
         %h4.no-comment= 'Ещё никто не оставил комментарий. Будьте первым!'
     .row
