--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -25,19 +25,25 @@
             %input.body_edit{ value: comment.body, hidden: true}
             .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
             %input.comment_id{ value: comment.id, hidden: true }
-            %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon.red.float-right
+            - if policy(comment).edit?
             %button.btn.btn-default.edit_comment.glyphicon.glyphicon-pencil.icon.float-right
+            - if policy(comment).destroy?
+              %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon.red.float-right
       - else
         %h4.no-comment= 'Ещё никто не оставил комментарий. Будьте первым!'
     .row
       - if user_signed_in?
         .col-md-6
-          %textarea.form-control#comment_body
-          %input#post_id{ value: @post.id, hidden: true }
-          %input#author_id{ value: current_user.id, hidden: true }
-          %input#author_username{ value: current_user.username, hidden: true }
-          %input#author_avatar{ value: current_user.avatar, hidden: true }
-          %button.btn.btn-success.mt-10.create_comment= 'Добавить комментарий'
+          - if current_user&.banned?
+            %p
+              = 'Вы были забанены и не можете оставлять комментарии'
+          - else
+            %textarea.form-control#comment_body
+            %input#post_id{ value: @post.id, hidden: true }
+            %input#author_id{ value: current_user.id, hidden: true }
+            %input#author_username{ value: current_user.username, hidden: true }
+            %input#author_avatar{ value: current_user.avatar, hidden: true }
+            %button.btn.btn-success.mt-10.create_comment= 'Добавить комментарий'
       - else
         .col-md-6
           %p
