#36: Finally done. Mnogo vsego :(

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import 'scaffolds';
 @import 'posts';
 @import 'users';
+@import 'categories';
 @import 'font-awesome';
 @import 'froala_editor.min.css';
 @import 'froala_style.min.css';
