--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,31 +1,20 @@
 .row
   - if policy(@categories).create?
     .col-xs-12.col-sm-6.col-md-4.col-lg-4
-      = render partial: 'layouts/svg', locals: {points: '0,100 30,0 100,0 100,100', fill: 'white'}
       = link_to new_category_path do
-        %table.table.post
-          %tr
-            %td.plus.no-border
-      = render partial: 'layouts/svg', locals: {points: '100,0 70,100 0,100 0,0', fill: 'white'}
+        .div-round-plus
+          .plus.no-border
   - @categories.each do |category|
     .col-xs-12.col-sm-6.col-md-4.col-lg-4
-      = render partial: 'layouts/svg', locals: {points: '0,100 30,0 100,0 100,100', fill: 'white'}
-      %table.table.post
-        %tr
-          %td.no-border{colspan: 3}= image_tag(category.image, size: 200)
-        %tr
-          %th.title{colspan: 3}= link_to truncate(category.title, length: 25), category
-        %tr
+      .div-round
+        = link_to category do
+          = image_tag(category.image, size: 175, class: 'center-block')
+        .text-center
+          = link_to truncate(category.title, length: 25, class: 'text-center'), category
           - if policy(category).edit?
-            %td.no-border
-              =link_to edit_category_path(category), class: 'btn btn-default icon' do
-                %span.glyphicon.glyphicon-pencil(aria-hidden= 'true')
+            %br
+            =link_to edit_category_path(category), class: 'btn btn-default icon' do
+              %span.glyphicon.glyphicon-pencil(aria-hidden= 'true')
           - if policy(category).destroy?
-            %td.no-border
-              =link_to category, method: :delete, data: { confirm: 'Вы уверены?' }, class: 'btn btn-default icon' do
-                %span.glyphicon.glyphicon-trash(aria-hidden= 'true')
-      = link_to category do
-        #svg-container.margin-bottom
-          %svg.read{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
-            %polygon{points: '100,0 70,100 0,100 0,0'}
-            %text{textLength: '60', lengthAdjust: 'spacingAndGlyphs', x: '5', y: '60'} Открыть категорию
+            =link_to category, method: :delete, data: { confirm: 'Вы уверены?' }, class: 'btn btn-default icon' do
+              %span.glyphicon.glyphicon-trash(aria-hidden= 'true')
