--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -13,7 +13,7 @@ table.table.post {
   }
   td.time {
     font-size: 1rem;
-    color: blue;
+    color: #09093B;
     padding: 0;
   }
   td.text {
@@ -23,48 +23,6 @@ table.table.post {
   td.body {
     text-align: justify;
     font-size: 1.5rem;
-  }
-}
-
-.plus {
-  background: url(plus.png);
-  width: 168px;
-  height: 168px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  transition: all 0.5s ease;
-}
-
-.plus:hover {
-  background: url(plus_hover.png);
-  width: 168px;
-  height: 168px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-
-.svg-block {
-  width: 100%;
-  height: 100%;
-}
-
-.margin-bottom {
-  margin-bottom: 20px;
-}
-
-.read {
-  fill: white;
-  transition: all 1s;
-  text {
-    fill: black;
-  }
-  &:hover {
-    fill: purple;
-    text {
-      fill: white;
-    }
   }
 }
 
@@ -117,11 +75,11 @@ table.table.post {
 }
 
 a.list-group-item.active {
-  background-color: #5cb85c;
-  border-color: #5cb85c;
+  background-color: #008D94;
+  border-color: #008D94;
   &:hover{
-    background-color: #5cb85c;
-    border-color: #5cb85c;
+    background-color: #008D94;
+    border-color: #008D94;
   }
 }
 
