--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
       = yield
     %footer.container
       .row
-        = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: '#277676'}
+        = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: '#E7FEFF'}
       .site-footer
         %ul.list-unstyled.inline
           %li.inline
