--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -17,4 +17,4 @@
     = f.label :Тело_поста
     = f.text_area :body, id: 'wysiwyg'
   .actions
-    = f.submit class: 'btn btn-primary'
+    = f.submit class: 'btn btn-my'
