--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -44,7 +44,7 @@
             %input#author_id{ value: current_user.id, hidden: true }
             %input#author_username{ value: current_user.username, hidden: true }
             %input#author_avatar{ value: current_user.avatar, hidden: true }
-            %button.btn.btn-success.mt-10.create_comment= 'Добавить комментарий'
+            %button.btn.btn-my.mt-10.create_comment= 'Добавить комментарий'
       - else
         .col-md-6
           %p
