--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -7,7 +7,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   padding: 50px;
-  margin-top: 30px;
+  margin-top: 70px;
 }
 
 .div-round {
@@ -30,8 +30,8 @@
   margin-left: auto;
   margin-right: auto;
   background: url(plus.png);
-  width: 168px;
-  height: 168px;
+  width: 100px;
+  height: 100px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -40,9 +40,23 @@
 
 .plus:hover {
   background: url(plus_hover.png);
-  width: 168px;
-  height: 168px;
+  width: 120px;
+  height: 120px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 50% 50%;
+}
+
+.read {
+  fill: white;
+  transition: all 1s;
+  text {
+    fill: black;
+  }
+  &:hover {
+    fill: #008D94;
+    text {
+      fill: white;
+    }
+  }
 }
