--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -14,4 +14,4 @@
     = f.label :Изображение_категории
     = f.file_field :image, class: 'form-control'
   .actions
-    = f.submit class: 'btn btn-primary'
+    = f.submit class: 'btn btn-my'
