--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,5 +1,5 @@
 .container
   %h1= 'Редактирование поста'
   = render 'form', post: @post
-  = link_to 'Просмотр', category_post_path(@category, @post), class: 'btn btn-primary mt-10'
-  = link_to 'Назад', category_posts_path(@category), class: 'btn btn-primary mt-10'
+  = link_to 'Просмотр', category_post_path(@category, @post), class: 'btn btn-my mt-10'
+  = link_to 'Назад', category_posts_path(@category), class: 'btn btn-my mt-10'
