--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -25,7 +25,7 @@
       = f.label :Текущий_пароль, class: 'control-label'
       %i (для применения изменений)
       = f.password_field :current_password, autocomplete: "off", class: 'form-control'
-    = image_tag(current_user.avatar.url, size: '300', class: 'img-circle')
+    = image_tag(current_user.avatar.url, class: 'img-circle')
     .form-group
       = f.label :Новый_аватар, class: 'control-label'
       = f.file_field :avatar, class: 'form-control'
