--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,6 +28,7 @@
             %button.close{'data-dismiss' => 'alert'} &times;
             = flash[:alert]
         .head
+          = image_tag 'header-image-3.png', class: 'header-image'
           %h1= link_to 'ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ', root_path
       .bg-transparent
     %main.container
@@ -39,4 +40,4 @@
         %ul.list-unstyled.inline
           %li.inline
             \© 2016
-            %span= 'Autism, Inc.'
+            %span= 'Dev, Inc.'
