--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -21,7 +21,7 @@
         - @post.comments.each do |comment|
           %a.list-group-item
             .comment_author
-              =image_tag(comment.user.avatar.url, size: '50', class: 'img-circle')
+              =image_tag(comment.user.avatar.thumbnail.url, class: 'img-circle')
               ="#{comment.user.username} время создания: #{I18n.l(comment.created_at, format: :short)}"
             %input.body_edit{ value: comment.body, hidden: true}
             .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
