--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -21,7 +21,7 @@
         - @post.comments.each do |comment|
           %a.list-group-item
             .comment_author
-              =image_tag(comment.user.avatar.url, size: '50', class: 'img-circle')
+              =image_tag(comment.user.avatar.thumbnail.url, class: 'img-circle')
               ="#{comment.user.username} время создания: #{I18n.l(comment.created_at, format: :short)}"
             %input.body_edit{ value: comment.body, hidden: true}
             .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
@@ -44,7 +44,7 @@
             %input#author_id{ value: current_user.id, hidden: true }
             %input#author_username{ value: current_user.username, hidden: true }
             %input#author_avatar{ value: current_user.avatar, hidden: true }
-            %button.btn.btn-success.mt-10.create_comment= 'Добавить комментарий'
+            %button.btn.btn-my.mt-10.create_comment= 'Добавить комментарий'
       - else
         .col-md-6
           %p
