--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -97,10 +97,13 @@ a.list-group-item.active {
   float: right;
 }
 
-#svg-container {
-  width: 100%;
-  height: 36px;
-}
 .form-group {
   width: 97.5%;
+}
+
+@media only screen and (max-device-width:480px){
+  table.table.post th.title{
+    font-size: 3rem;
+    line-height: 3rem;
+  }
 }
