--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,6 +1,6 @@
 .row
   - if policy(@categories).create?
-    .col-xs-12.col-sm-6.col-md-4.col-lg-4
+    .col-xs-12.col-sm-12.col-md-4.col-lg-4
       = link_to new_category_path do
         .div-round-plus
           .plus.no-border
@@ -8,7 +8,7 @@
     .col-xs-12.col-sm-6.col-md-4.col-lg-4
       .div-round
         = link_to category do
-          = image_tag(category.image, size: 175, class: 'center-block')
+          = image_tag(category.image, class: 'center-block category-image')
         .text-center
           = link_to truncate(category.title, length: 25, class: 'text-center'), category
           - if policy(category).edit?
