--- a/app/views/categories/new.html.haml
+++ b/app/views/categories/new.html.haml
@@ -1,3 +1,4 @@
-%h1 Новая категория
-= render 'form', category: @category
-= link_to 'Назад', root_path
+.container
+  %h1 Новая категория
+  = render 'form', category: @category
+  = link_to 'Назад', root_path, class: 'btn btn-primary mt-10'
