--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,9 +1,11 @@
-%h2 Забыли Ваш пароль?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :Имя_пользователя
-    = f.text_field :username, autofocus: true
-  .actions
-    = f.submit "Пришлите мне инструкции по восстановлению"
-= render "devise/shared/links"
+.registration_container
+  .registration_block
+    %h2 Забыли Ваш пароль?
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+      = devise_error_messages!
+      .field
+        = f.label :Имя_пользователя
+        = f.text_field :username, autofocus: true
+      .actions
+        = f.submit "Пришлите мне инструкции по восстановлению"
+    = render "devise/shared/links"
