--- a/app/views/layouts/_svg.html.haml
+++ b/app/views/layouts/_svg.html.haml
@@ -1,3 +1,3 @@
-#svg-container
+.svg-container
   %svg{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
     %polygon{points: points, fill: fill}
