--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,8 @@
   %body
     .container.no-padding
       %header
-        %ul.list-unstyled.inline.pull-right.mb-0
+        %ul.list-unstyled.header-list
+          %li.inline= link_to 'Главная', root_path, class: 'btn btn-link header-nav-link'
           - if user_signed_in?
             %li.inline= link_to 'Профиль', user_profile_path(current_user.username), class: 'btn btn-link header-nav-link'
             %li.inline= link_to 'Выход', destroy_user_session_path, method: :delete, class: 'btn btn-link header-nav-link'
@@ -30,14 +31,14 @@
         .head
           = image_tag 'header-image-3.png', class: 'header-image'
           %h1= link_to 'ПЕРСОНАЛЬНЫЙ САЙТ УЧИТЕЛЯ МАТЕМАТИКИ', root_path
-      .bg-transparent
+        = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: '#008D94'}
     %main.container
+      = render partial: 'layouts/svg', locals: {points: '0,100 100,0 100,100', fill: '#defeff'}
       = yield
+      = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: '#defeff'}
     %footer.container
-      .row
-        = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: '#E7FEFF'}
+      = render partial: 'layouts/svg', locals: {points: '0,100 100,0 100,100', fill: '#005858'}
       .site-footer
         %ul.list-unstyled.inline
           %li.inline
-            \© 2016
-            %span= 'Dev, Inc.'
+            %a.footer-link{href: "mailto: math4all@mail.ru"}= "© #{Date.today.year} MATH4ALL, ALL RIGHTS RESERVED"
