--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -22,9 +22,12 @@
           %a.list-group-item
             .comment_author
               =image_tag(comment.user.avatar.thumbnail.url, class: 'img-circle')
-              ="#{comment.user.username} время создания: #{I18n.l(comment.created_at, format: :short)}"
-            %input.body_edit{ value: comment.body, hidden: true}
-            .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
+              %span
+                = comment.user.username
+              %span.comment-date
+                = I18n.l(comment.created_at, format: :short)
+            %textarea.body_edit{hidden: true}
+            %pre.comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
             %input.comment_id{ value: comment.id, hidden: true }
             - if policy(comment).destroy?
               %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon.red.float-right
