--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -101,9 +101,24 @@ a.list-group-item.active {
   width: 97.5%;
 }
 
+.social-share-button{
+  text-align: center;
+}
+
+.row .social-share-button .ssb-icon {
+    background-size: 22px 22px;
+    height: 22px;
+    width: 22px;
+}
+
 @media only screen and (max-device-width:480px){
   table.table.post th.title{
     font-size: 3rem;
     line-height: 3rem;
+  }
+  .row .social-share-button .ssb-icon {
+      background-size: 52px 52px;
+      height: 52px;
+      width: 52px;
   }
 }
